// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render no result 1`] = `
<div
  className="flex h-full overflow-auto flex-col"
>
  <div
    className="flex flex-1 justify-center items-center"
  >
    <div
      className="flex flex-1 justify-center items-center flex-col"
    >
      events.filters.empty
    </div>
  </div>
</div>
`;

exports[`should render some events 1`] = `
<div
  className="flex h-full overflow-auto flex-col"
>
  events.more
</div>
`;

exports[`should render virgin workspace 1`] = `
<div
  className="flex h-full overflow-auto flex-col"
>
  <div
    className="flex flex-1 justify-between flex-col p-28"
  >
    <div
      className="flex flex-col flex-1 justify-center w-[17rem]"
    >
      <div
        className="font-bold text-2xl my-2"
      >
        a
      </div>
      <div>
        b
      </div>
    </div>
    <div
      className="flex flex-col"
    >
      <div
        className="my-8"
      >
        workspace.empty.subtitle
      </div>
      <div
        className="flex flex-row"
      >
        <button
          className="
        focus:outline-none
        flex flex-col rounded flex-1 m-2 p-4 text-sm text-left justify-between
        transition-all group
        hover:shadow-2xl hover:-translate-y-2
        !ml-0
      "
          onClick={[MockFunction]}
          style={
            Object {
              "backgroundColor": "#F7F8D0",
            }
          }
        >
          <div
            className="flex flex-col"
          >
            <div
              className="font-bold mb-2"
            >
              workspace.empty.suggestions.page.title
            </div>
            <div
              className="relative min-h-[55px]"
            >
              <div
                className="transition-all opacity-100 group-hover:opacity-0"
              >
                workspace.empty.suggestions.page.text
              </div>
              <div
                className=" absolute top-0 flex flex-row mt-4 py-2 px-4 rounded text-3xl bg-[white] transition-all whitespace-nowrap overflow-hidden opacity-0 group-hover:opacity-100 "
                style={
                  Object {
                    "color": "#F7F8D0",
                  }
                }
              >
                +
              </div>
            </div>
          </div>
        </button>
        <button
          className="
        focus:outline-none
        flex flex-col rounded flex-1 m-2 p-4 text-sm text-left justify-between
        transition-all group
        hover:shadow-2xl hover:-translate-y-2
        undefined
      "
          onClick={[MockFunction]}
          style={
            Object {
              "backgroundColor": "#FF9261",
            }
          }
        >
          <div
            className="flex flex-col"
          >
            <div
              className="font-bold mb-2"
            >
              workspace.empty.suggestions.automation.title
            </div>
            <div
              className="relative min-h-[55px]"
            >
              <div
                className="transition-all opacity-100 group-hover:opacity-0"
              >
                workspace.empty.suggestions.automation.text
              </div>
              <div
                className=" absolute top-0 flex flex-row mt-4 py-2 px-4 rounded text-3xl bg-[white] transition-all whitespace-nowrap overflow-hidden opacity-0 group-hover:opacity-100 "
                style={
                  Object {
                    "color": "#FF9261",
                  }
                }
              >
                +
              </div>
            </div>
          </div>
        </button>
        <button
          className="
        focus:outline-none
        flex flex-col rounded flex-1 m-2 p-4 text-sm text-left justify-between
        transition-all group
        hover:shadow-2xl hover:-translate-y-2
        undefined
      "
          onClick={[MockFunction]}
          style={
            Object {
              "backgroundColor": "#E7F6F6",
            }
          }
        >
          <div
            className="flex flex-col"
          >
            <div
              className="font-bold mb-2"
            >
              workspace.empty.suggestions.app.title
            </div>
            <div
              className="relative min-h-[55px]"
            >
              <div
                className="transition-all opacity-100 group-hover:opacity-0"
              >
                workspace.empty.suggestions.app.text
              </div>
              <div
                className=" absolute top-0 flex flex-row mt-4 py-2 px-4 rounded text-3xl bg-[white] transition-all whitespace-nowrap overflow-hidden opacity-0 group-hover:opacity-100 "
                style={
                  Object {
                    "color": "#E7F6F6",
                  }
                }
              >
                +
              </div>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;
